@@ -1,8 +1,8 @@
 Package: RApiDatetime
 Type: Package
 Title: R API for 'Date' and 'Datetime' 
-Version: 0.0.9.1
-Date: 2025-08-04
+Version: 0.0.9.2
+Date: 2026-01-02
 Authors@R: c(person("Dirk", "Eddelbuettel", role = c("aut", "cre"), email = "edd@debian.org",
                     comment = c(ORCID = "0000-0001-6419-907X")),
              person("R Core", role = "aut", comment = "Included date / datetime code"))
