@@ -1,3 +1,9 @@
+2026-01-02  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/datetime.c (Rstrptime): Use Rf_setAttrib with R 4.5.0 or later
+	* src/attrib.c (installAttrib): Minor updated relative to R source,
+	also compile only under older R to avoid nags on SET_ATTRIB and ATTRIB
+
 2025-02-18  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .github/workflows/ci.yaml (jobs): Use r-ci action with bootstrap
